--- a/components/mq/variants/region/madrid/native-ha-group.yaml
+++ b/components/mq/variants/region/madrid/native-ha-group.yaml
@@ -7,7 +7,7 @@ spec:
     availability:
       nativeHAGroups:
         local:
-          name: us-west
+          name: madrid
           tls:
             key:
               secretName: default-cert-copy
@@ -16,8 +16,8 @@ spec:
                 - tls.crt
         remotes: 
           - addresses:  
-            - native-ha-qm-crr-ibm-mq-nhacrr-cp4i.apps.jeh876t2.eastus.aroapp.io:443
-            name: us-east
+            - native-ha-qm-crr-ibm-mq-nhacrr-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com:443
+            name: frankfurt
             trust: 
               - secret:
                   secretName: default-cert-copy  
