--- a/argocd/regions/frankfurt/kustomization.yaml
+++ b/argocd/regions/frankfurt/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ../../operators
   - ../../common
 
-  #- ../../operands/frankfurt
+  - ../../operands/frankfurt
  
 patches:
 - target:
