fix faulty address

--- a/components/mq/variants/region/madrid/native-ha-group.yaml
+++ b/components/mq/variants/region/madrid/native-ha-group.yaml
@@ -15,12 +15,13 @@ spec:
                 - tls.key
                 - tls.crt
         remotes: 
-          - addresses:  
-            - native-ha-qm-crr-ibm-mq-nhacrr-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com:443
+          - addresses:
+            - native-ha-qm-crr-ibm-mq-nhacrr-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com:443  
             name: frankfurt
             trust: 
               - secret:
                   secretName: default-cert-copy  
                   items:
-                  - ca.crt       
+                  - ca.crt
+                  - tls.crt    
                 
