fix faulty address

--- a/components/mq/variants/region/madrid/native-ha-group.yaml
+++ b/components/mq/variants/region/madrid/native-ha-group.yaml
@@ -20,6 +20,6 @@ spec:
             name: frankfurt
             trust: 
               - secret:
-                  secretName: default-cert-copy  
+                  secretName: letsencrypt-chain  
                   items:
                   - ca.crt                
