--- a/components/mq/base/cphtestp/job.yaml
+++ b/components/mq/base/cphtestp/job.yaml
@@ -61,6 +61,6 @@ spec:
       volumes:
       - name: cphdata
         emptyDir: {}
-      nodeSelector: 
-        kubernetes.io/hostname : worker5.<hostname>
+      #nodeSelector: 
+      # kubernetes.io/hostname : worker5.<hostname>
         
