remove network annotation

--- a/components/mq/base/cphtestp/job.yaml
+++ b/components/mq/base/cphtestp/job.yaml
@@ -10,8 +10,8 @@ spec:
     metadata:
       labels:
         run: cphtestp
-      annotations:
-        k8s.v1.cni.cncf.io/networks: cp4i/tengig
+      #annotations:
+        #k8s.v1.cni.cncf.io/networks: cp4i/tengig
     spec:
       containers:
       - env:
