--- a/components/mq/base/cphtestp/job.yaml
+++ b/components/mq/base/cphtestp/job.yaml
@@ -18,15 +18,15 @@ spec:
         - name: LICENSE
           value: accept
         - name: MQ_QMGR_HOSTNAME
-          value: "172.30.26.108"
+          value: native-ha-qm-crr-ibm-mq.cp4i.svc.cluster.local
         - name: MQ_QMGR_PORT
-          value: "1414"
+          value: 1414
         #- name: MQ_USERID
         #  value: 
         #- name: MQ_PASSWORD
         #  value: 
         - name: MQ_QMGR_CHANNEL
-          value: METRICS
+          value: KAFKA
         - name: MQ_RESPONDER_THREADS
           value: "500"
         - name: MQ_NON_PERSISTENT
