--- a/components/mq/base/cphtestp/job.yaml
+++ b/components/mq/base/cphtestp/job.yaml
@@ -4,14 +4,11 @@ metadata:
   labels:
     run: cphtestp
   name: cphtestp
-  #namespace: cp
 spec:
   template:
     metadata:
       labels:
         run: cphtestp
-      #annotations:
-        #k8s.v1.cni.cncf.io/networks: cp4i/tengig
     spec:
       containers:
       - env:
@@ -26,9 +23,9 @@ spec:
         - name: MQ_PASSWORD
           value: 
         - name: MQ_QMGR_CHANNEL
-          value: METRICS
+          value: KAFKA
         - name: MQ_RESPONDER_THREADS
-          value: "500"
+          value: "5"
         - name: MQ_NON_PERSISTENT
           value: "0"
         - name: MQ_QMGR_NAME
