--- a/components/common/base/letsencrypt-chain/kustomization.yaml
+++ b/components/common/base/letsencrypt-chain/kustomization.yaml
@@ -7,3 +7,6 @@ secretGenerator:
   - x1-root.crt=x1-root.pem
   - r10.crt=r10.pem
   type: "kubernetes.io/tls"
+
+generatorOptions:
+  disableNameSuffixHash: true
