--- a/components/mq/variants/region/madrid/native-ha-group.yaml
+++ b/components/mq/variants/region/madrid/native-ha-group.yaml
@@ -22,5 +22,4 @@ spec:
               - secret:
                   secretName: letsencrypt-chain  
                   items:
-                    - x1-root.crt
-                    - r10.crt
+                    - ca.crt
