--- a/components/mq/variants/region/madrid/native-ha-group.yaml
+++ b/components/mq/variants/region/madrid/native-ha-group.yaml
@@ -16,7 +16,7 @@ spec:
                 - tls.crt
         remotes: 
           - addresses:
-            - native-ha-qm-crr-ibm-mq-nhacrr-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com:443  
+            - PATCHED_BY_KUSTOMIZE  
             name: frankfurt
             trust: 
               - secret:
