--- a/components/mq/base/qm1/tls/queue-manager-certificate.yaml
+++ b/components/mq/base/qm1/tls/queue-manager-certificate.yaml
@@ -2,16 +2,16 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: mq-external-tls
+  name: qm1-external-tls
 spec:
   secretTemplate:
     annotations:
       cert-utils-operator.redhat-cop.io/generate-cert-info: "true"
       cert-utils-operator.redhat-cop.io/generate-java-keystores: "true"
-  secretName: mq-external-tls-secret
+  secretName: qm1-external-tls-secret
   duration: 2160h0m0s # 90d
   renewBefore: 360h0m0s # 15d
-  commonName: "extcert"
+  commonName: "qm1-extcert"
   subject:
     organizations:
       - 'mqss'
