--- a/components/mq/base/qm2/qm.yaml
+++ b/components/mq/base/qm2/qm.yaml
@@ -4,8 +4,8 @@ metadata:
   name: qm2
   annotations:
     certmanager.k8s.io/disable-auto-restart: "true"
-    configmap.reloader.stakater.com/reload: "native-ha-qm-configmap"
-    secret.reloader.stakater.com/reload: "mq-nativeha-internal-tls-secret,mq-external-tls-secret,letsencrypt-chain"
+    configmap.reloader.stakater.com/reload: "qm2-configmap"
+    secret.reloader.stakater.com/reload: "qm2-nativeha-internal-tls-secret,qm2-external-tls-secret,letsencrypt-chain"
 spec:
   #telemetry:
   #  tracing:
@@ -48,7 +48,7 @@ spec:
     availability:
       type: NativeHA
       tls:
-        secretName: mq-nativeha-internal-tls-secret
+        secretName: qm2-nativeha-internal-tls-secret
     storage:
       queueManager:
         size: 10Gi
@@ -86,14 +86,14 @@ spec:
     keys:
       - name: default
         secret:
-          secretName: mq-external-tls-secret
+          secretName: qm2-external-tls-secret
           items:
             - tls.key
             - tls.crt
     trust:
       - name: trust
         secret:
-          secretName: mq-external-tls-secret
+          secretName: qm2-external-tls-secret
           items:
             - tls.crt
             - ca.crt
