--- a/envs/odf/madrid/mq/external-tls-qm2-patch.yaml
+++ b/envs/odf/madrid/mq/external-tls-qm2-patch.yaml
@@ -1,3 +1,3 @@
 - op: add
   path: /spec/dnsNames
-  value: qm2-ibm-mq-qm-cp4i.apps.67ed0a2171917a5408c1aee8.ocp.techzone.ibm.com
+  value: ['qm2-ibm-mq-qm-cp4i.apps.67ed0a2171917a5408c1aee8.ocp.techzone.ibm.com']
