--- a/components/mq/base/uniform-cluster-a/common-qm-config/uniform-cluster.ini
+++ b/components/mq/base/uniform-cluster-a/common-qm-config/uniform-cluster.ini
@@ -7,5 +7,5 @@ AutoCluster:
       Repository2Name=QM1
       Repository1Conname=qm2-ibm-mq.cp4i.svc(1414)
       Repository1Name=QM2
-      ClusterName=DEMOCLUSTER
+      ClusterName=UCLA
       Type=Uniform
