move back to services

--- a/components/mq/base/uniform-cluster-a/common-qm-config/uniform-cluster.ini
+++ b/components/mq/base/uniform-cluster-a/common-qm-config/uniform-cluster.ini
@@ -1,7 +1,7 @@
 AutoCluster:
-      Repository2Conname=qm1-ibm-mq-qm-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com(443)
+      Repository2Conname=qm1-ibm-mq.cp4i.svc.cluster.local(1414)
       Repository2Name=QM1
-      Repository1Conname=qm2-ibm-mq-qm-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com(443)
+      Repository1Conname=qm2-ibm-mq.cp4i.svc.cluster.local(1414)
       Repository1Name=QM2
       ClusterName=UCLA
       Type=Uniform
