--- a/components/mq/base/uniform-cluster-a/common-qm-config/kustomization.yaml
+++ b/components/mq/base/uniform-cluster-a/common-qm-config/kustomization.yaml
@@ -9,7 +9,7 @@ configMapGenerator:
       - config.mqsc
   - name: uniform-cluster-ini
     files:
-      - uniform-cluster.ini
+      - uniform-cluster-routes.ini
 
 generatorOptions:
   disableNameSuffixHash: true
