--- a/components/mq/base/uniform-cluster-a/common-qm-config/uniform-cluster-routes.ini
+++ b/components/mq/base/uniform-cluster-a/common-qm-config/uniform-cluster-routes.ini
@@ -1,3 +1,6 @@
+SSL:
+  OutboundSNI=HOSTNAME
+
 AutoCluster:
       Repository2Conname=qm1-ibm-mq-qm-cp4i.apps.67ed09ced6d44283b3abd409.eu1.techzone.ibm.com(443)
       Repository2Name=QM1
