--- a/components/mq/base/uniform-cluster-a/qm1/kustomization.yaml
+++ b/components/mq/base/uniform-cluster-a/qm1/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 configMapGenerator:
   - name: qm1-config
     files:
-      - config-routes.mqsc
+      - config.mqsc
 
 generatorOptions:
   disableNameSuffixHash: true
