Update client sample.

--- a/components/mq/base/uniform-cluster-a/mqclient.ini
+++ b/components/mq/base/uniform-cluster-a/mqclient.ini
@@ -1,2 +1,8 @@
 SSL:
   OutboundSNI=HOSTNAME
+  # Truststore needs to include both letsencrypt root and sectigo root
+  # since we're fetching the ccdt from Github url.
+  SSLKeyRepository=/Users/kjelllarsson/letsencrypt/truststore.kdb
+CHANNELS:
+  ChannelDefinitionDirectory=https://raw.githubusercontent.com/kjellmlarsson/mq-crr-ibmcloud/refs/heads/main/components/mq/base/uniform-cluster-a/
+  ChannelDefinitionFile=ccdt.json
