--- a/argocd/operands/madrid/operands.yaml
+++ b/argocd/operands/madrid/operands.yaml
@@ -14,7 +14,10 @@ spec:
             sync-wave: "200"
           - name: openshift-monitoring
             namespace: openshift-monitoring
-            sync-wave: "300"     
+            sync-wave: "300"
+          - name: openshift-telemetry
+            namespace: openshift-opentelemetry-operator
+            sync-wave: "300"       
   template:
     metadata:
       name: '{{name}}'
