add tempo for traces

--- a/argocd/operators/operators.yaml
+++ b/argocd/operators/operators.yaml
@@ -12,8 +12,8 @@ spec:
             namespace: cp4i
           - name: cert-utils
             namespace: cert-utils-operator
-          - name: openshift-telemetry
-            namespace: openshift-opentelemetry-operator
+          - name: openshift-tempo-operator
+            namespace: openshift-tempo-operator
   template:
     metadata:
       name: '{{name}}-operator'
