--- a/argocd/operands/madrid/operands.yaml
+++ b/argocd/operands/madrid/operands.yaml
@@ -15,8 +15,8 @@ spec:
           - name: openshift-monitoring
             namespace: openshift-monitoring
             sync-wave: "300"
-          - name: openshift-telemetry
-            namespace: openshift-opentelemetry-operator
+          - name: openshift-tempo-operator
+            namespace: openshift-tempo-operator
             sync-wave: "300"       
   template:
     metadata:
