--- a/components/openshift-telemetry/operator/tempo-subscription.yaml
+++ b/components/openshift-telemetry/operator/tempo-subscription.yaml
@@ -1,11 +1,11 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: opentelemetry-product
-  namespace: openshift-opentelemetry-operator
+  name: tempo-product
+  namespace: openshift-tempo-operator
 spec:
   channel: stable
   installPlanApproval: Automatic
-  name: opentelemetry-product
+  name: tempo-product
   source: redhat-operators
   sourceNamespace: openshift-marketplace
