--- a/envs/odf/madrid/openshift-telemetry/kustomization.yaml
+++ b/envs/odf/madrid/openshift-telemetry/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 
 resources:
 - ../../../../components/openshift-telemetry/base
+
+components:
+  - ../../../../components/openshift-telemetry/variants/odf
