--- a/argocd/common/cp4i-argo-role.yaml
+++ b/argocd/common/cp4i-argo-role.yaml
@@ -33,6 +33,7 @@ rules:
       - objectbucket.io
       - tempo.grafana.com
       - opentelemetry.io
+      - projects.project.openshift.io
       - ""
     resources:
       - '*'
