--- a/components/mq/base/uniform-cluster-a/qm1/qm.yaml
+++ b/components/mq/base/uniform-cluster-a/qm1/qm.yaml
@@ -30,10 +30,10 @@ spec:
             #- name: IBMMQ_RFH2_HEADERS_TO_EXPOSE
             #  value: 'usr.<custome element1>, usr.<custom element 2>'
             # For otel tracing
-            #- name: LOG_LEVEL
-            #  value: debug
-            #- name: MONITOR_LEVEL
-            #  value: debug
+            - name: LOG_LEVEL
+              value: debug
+            - name: MONITOR_LEVEL
+              value: debug
             - name: SPAN_FORMAT
               value: otel
             - name: OTLP_EXPORTER_GRPC_ENDPOINT
