--- a/components/mq/base/uniform-cluster-a/qm2/qm.yaml
+++ b/components/mq/base/uniform-cluster-a/qm2/qm.yaml
@@ -7,10 +7,10 @@ metadata:
     configmap.reloader.stakater.com/reload: "qm2-config,uniform-cluster-common-config,uniform-cluster-ini"
     secret.reloader.stakater.com/reload: "qm2-nativeha-internal-tls-secret,qm2-external-tls-secret,letsencrypt-chain"
 spec:
-  #telemetry:
-  #  tracing:
-  #    instana:
-  #      enabled: true
+  telemetry:
+    tracing:
+      instana:
+        enabled: true
   license:
     accept: true
     license: PATCHED_BY_KUSTOMIZE
@@ -28,14 +28,14 @@ spec:
             #- name: IBMMQ_RFH2_HEADERS_TO_EXPOSE
             #  value: 'usr.<custome element1>, usr.<custom element 2>'
             # For otel tracing
-            #- name: LOG_LEVEL
-            #  value: debug
-            #- name: MONITOR_LEVEL
-            #  value: debug
-            #- name: SPAN_FORMAT
-            #  value: otel
-            #- name: OTLP_EXPORTER_GRPC_ENDPOINT
-            #  value: 'tempo-tempostack-distributor.openshift-tempo-operator.svc.cluster.local:4317'
+            - name: LOG_LEVEL
+              value: debug
+            - name: MONITOR_LEVEL
+              value: debug
+            - name: SPAN_FORMAT
+              value: otel
+            - name: OTLP_EXPORTER_GRPC_ENDPOINT
+              value: 'tempo-tempostack-distributor.openshift-tempo-operator.svc.cluster.local:4317'
           name: qmgr
   queueManager:
     metrics:
