--- a/argocd/operators/operators.yaml
+++ b/argocd/operators/operators.yaml
@@ -12,7 +12,9 @@ spec:
             namespace: cp4i
           - name: cert-utils
             namespace: cert-utils-operator
-          - name: openshift-telemetry-operator
+          - name: openshift-telemetry
+            namespace: openshift-telemetry-operator
+          - name: openshift-cluster-observability
             namespace: openshift-telemetry-operator
   template:
     metadata:
