--- a/argocd/operands/frankfurt/operands.yaml
+++ b/argocd/operands/frankfurt/operands.yaml
@@ -15,9 +15,9 @@ spec:
           - name: openshift-monitoring
             namespace: openshift-monitoring
             sync-wave: "300"
-          - name: openshift-telemetry
-            namespace: openshift-opentelemetry-operator
-            sync-wave: "300"
+          #- name: openshift-telemetry
+          #  namespace: openshift-opentelemetry-operator
+          #  sync-wave: "300"
   template:
     metadata:
       name: '{{name}}'
