--- a/argocd/operands/madrid/operands.yaml
+++ b/argocd/operands/madrid/operands.yaml
@@ -15,9 +15,9 @@ spec:
           - name: openshift-monitoring
             namespace: openshift-monitoring
             sync-wave: "300"
-          - name: openshift-tempo-operator
-            namespace: openshift-tempo-operator
-            sync-wave: "300"       
+          #- name: openshift-tempo-operator
+          #  namespace: openshift-tempo-operator
+          #  sync-wave: "300"       
   template:
     metadata:
       name: '{{name}}'
