--- a/components/openshift-cluster-observability/operator/operatorgroup.yaml
+++ b/components/openshift-cluster-observability/operator/operatorgroup.yaml
@@ -4,5 +4,4 @@ metadata:
   name: openshift-cluster-observability-operator-og
   namespace: openshift-cluster-observability-operator
 spec:
-  targetNamespaces:
-    - openshift-cluster-observability-operator
+  upgradeStrategy: Default
