--- a/argocd/operators/operators.yaml
+++ b/argocd/operators/operators.yaml
@@ -12,8 +12,8 @@ spec:
             namespace: cp4i
           - name: cert-utils
             namespace: cert-utils-operator
-          #- name: openshift-telemetry
-          #  namespace: openshift-telemetry-operator
+          - name: openshift-telemetry
+            namespace: openshift-telemetry-operator
           - name: openshift-cluster-observability
             namespace: openshift-telemetry-operator
   template:
