--- a/argocd/operands/madrid/operands.yaml
+++ b/argocd/operands/madrid/operands.yaml
@@ -15,9 +15,12 @@ spec:
           - name: openshift-monitoring
             namespace: openshift-monitoring
             sync-wave: "300"
-          #- name: openshift-tempo-operator
-          #  namespace: openshift-tempo-operator
-          #  sync-wave: "300"       
+          - name: openshift-telemetry
+            namespace: openshift-opentelemetry-operator
+            sync-wave: "300"
+          - name: openshift-cluster-observability
+            namespace: openshift-cluster-observability-operator
+            sync-wave: "300"
   template:
     metadata:
       name: '{{name}}'
