--- a/argocd/common/cp4i-argo-role.yaml
+++ b/argocd/common/cp4i-argo-role.yaml
@@ -34,7 +34,7 @@ rules:
       - tempo.grafana.com
       - opentelemetry.io
       - projects.project.openshift.io
-      - uiplugins.observability.openshift.io
+      - observability.openshift.io
       - ""
     resources:
       - '*'
