update tempostack cr

--- a/components/openshift-telemetry/base/tempostack.yaml
+++ b/components/openshift-telemetry/base/tempostack.yaml
@@ -13,6 +13,8 @@ spec:
     tls: 
       enabled: true
       caName: s3-ca
+  observability:
+    tracing: {}
   #template:
   #  queryFrontend:
   #    jaegerQuery:
