--- a/argocd/common/cp4i-argo-role.yaml
+++ b/argocd/common/cp4i-argo-role.yaml
@@ -35,6 +35,7 @@ rules:
       - opentelemetry.io
       - projects.project.openshift.io
       - observability.openshift.io
+      - tokenreviews.authentication.k8s.io
       - ""
     resources:
       - '*'
