--- a/argocd/common/cp4i-argo-role.yaml
+++ b/argocd/common/cp4i-argo-role.yaml
@@ -36,6 +36,7 @@ rules:
       - projects.project.openshift.io
       - observability.openshift.io
       - authentication.k8s.io
+      - authorization.k8s.io
       - ""
     resources:
       - '*'
