disable cluster observability operator

--- a/argocd/operators/operators.yaml
+++ b/argocd/operators/operators.yaml
@@ -14,8 +14,8 @@ spec:
             namespace: cert-utils-operator
           - name: openshift-telemetry
             namespace: openshift-telemetry-operator
-          - name: openshift-cluster-observability
-            namespace: openshift-telemetry-operator
+          #- name: openshift-cluster-observability
+          #  namespace: openshift-cluster-observability-operator
   template:
     metadata:
       name: '{{name}}-operator'
