--- a/components/mq/base/kustomization.yaml
+++ b/components/mq/base/kustomization.yaml
@@ -2,9 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources: 
-  #- metrics
+  
+  - metrics
  
   - uniform-cluster-a/qm1
   - uniform-cluster-a/qm2
   - uniform-cluster-a/common-qm-config
+  
   #- cphtestp/job.yaml
