--- a/components/mq/base/metrics/kustomization.yaml
+++ b/components/mq/base/metrics/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - empty-metrics-credentials.yaml
   - deployment.yaml
   - podmonitor.yaml
-  - buildconfig-otel.yaml
-  - deployment-otel.yaml
-  - mq-otel.yaml
+  #- buildconfig-otel.yaml
+  #- deployment-otel.yaml
+  #- mq-otel.yaml
